--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -13,10 +13,6 @@ body {
 html {
   font-family: $serif-primary;
   font-size: 16px;
-
-  @media (min-width: 600px) {
-    font-size: 18px;
-  }
 }
 
 body {
@@ -36,10 +32,15 @@ h6 {
 
 li,
 ul,
-p {
+p,
+.mycenter {
   color: $default-shade;
   font-family: $sans-serif;
   line-height: normal;
+}
+
+.mycenter {
+  text-align: center;
 }
 
 li,
