--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,12 +23,13 @@
 
     <footer style="text-align: center; font-size: bold;font-style: italic; color: #666; font-size: 1.2em;">
 
+      <div style="font-weight: bold;">“Always Wandering, Always Wondering.”</div>
+
       <div style="display: flex; justify-content: space-between; align-items: center; padding: 20px;">
-        <img src="assets/img/apple.png" alt="Apple Tree" style="width: 300px;">
-        <img src="assets/img/music_cat2.jpg" alt="Music Cat" style="width: 200px;">
+        <img src="{{ site.baseurl }}/assets/img/apple.png" alt="Apple Tree" style="width: 300px;">
+        <img src="{{ site.baseurl }}/assets/img/black_hole.png" alt="Black Hole" style="width: 200px;">
       </div>
 
-    <div style="font-weight: bold;">“Wandering, and Wondering.”</div>
 
     </footer>
     <footer>
