--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,7 +24,7 @@
     <footer>
       <div style="display: flex; justify-content: center; align-items: center; padding: 0 0;">
         <!-- 左侧图片 -->
-        <img src="{{ site.baseurl }}/assets/img/colorful_music.jpg" 
+        <img src="assets/img/colorful_music.jpg" 
              alt="Left Image" 
              style="width: 170px; margin-right: 60px;">
         
@@ -34,7 +34,7 @@
         </div>
         
         <!-- 右侧图片 -->
-        <img src="{{ site.baseurl }}/assets/img/cat_curious.jpg" 
+        <img src="assets/img/cat_curious.jpg" 
              alt="Right Image" 
              style="width: 140px; margin-left: 90px;">
       </div>
